--- a/Bericht/Projektdokumentation.tex
+++ b/Bericht/Projektdokumentation.tex
@@ -26,10 +26,20 @@
 	
 	\chapter{Start}
 	
-	%Wer sind wir
-	%warum dieses Projekt?
-	%Hütchen - Spiel (Post-It Ideen)
-	%Design-Thinking
+Im Rahmen des Masterstudiums wird das Studienfach „Projekt Netzbasierte Systeme“ angeboten. Der Kurs basiert sich auf einer Gruppenarbeit.
+Die Gruppe muss ein Thema wählen, das ein Problem mit der neuesten IT-Technologie löst. Das Projekt muss wie im realen Arbeitsleben durchgeführt werden. Die Aufgabenstellungen werden aus dem Themenbereich Informatik, Nachrichtentechnik und Kommunikationstechnik formuliert und unter Labor- und
+Praxisbedingungen bearbeitet. Die Studierenden haben die Fähigkeit entwickelt, konzeptionell Projekte zu erarbeiten, diese strukturiert, ablauf- und zielorientiert zu
+bearbeiten sowie erfolgreiche und verwertbare Ergebnisse zu präsentieren.
+Die Gruppe soll das Ziel haben, das Projekt so gut wie möglich zu vermarkten.
+Das Projekt wird sowohl den Managementteil als auch den technischen Teil evaluieren.\\\\
+Um das Thema für das Projekt zu wählen, hat man sich in Gruppen aufgeteilt und ein Brainstorming über die möglichen Probleme im Leben und deren Lösungen durchgeführt. 
+Diese wurde mithilfe der Post-IT Methode durchgeführt. Man schreibt die Ideen für eine Lösung eines Problems.
+Dadurch werden die Ideen gesammelt und das Thema, das Projekt wird näher definiert und  dargestellt. \\\\
+Durch für Methode des Design Thinking wird das Thema mehr genaue definiert. Man hat sich immer die Fragen gestellt: Welches Problem soll gelöst werden? Wer ist der Adressat der Lösung? Welche Priorität hat dieses Vorhaben? Was sind die Erfolgsfaktoren? \\\\
+Die "SchrödingersAlarm" Gruppe sind 4 Studenten, die an der HTW Berlin den Master Informations- und Kommunikationstechnik studieren. Die Qualität in der Gruppe hat sie zusammen vereint. Deren Qualitäten basieren sich auf Teamfähigkeit, Zuverlässigkeit und Lernbereitschaft. Jeder in der Gruppe ist selbstständig und hat eine eigenverantwortliche Arbeitsweise. Die Loyalität eine bessere Welt zu gestellten, hat sie motiviert dieses Projekt miteinander zu arbeiten.\\\\
+Nachdem das Team Ideen gesammelt hat, kam es zu der Idee ein System zum Schutz vor Automobil Diebstahl. 
+Als ersten Prototyp soll ein integriertes GPS, der die Koordinaten an den Nutzer über sein Smartphone senden. 
+Bei einem Fall, wo sich das Auto sich vom Smartphone des Nutzers weiter entfernt, soll eine Push-Benachrichtigung an den Nutzer gesendet.
 	
 	
 	\input{Zielsetzung.tex}
