--- a/Bericht/Rück_Ausblick.tex
+++ b/Bericht/Rück_Ausblick.tex
@@ -41,6 +41,10 @@ Um nicht nur den bisherigen Übertragungsweg über den HTTP-Server nutzen zu kö
 
  Anschließend muss in den beiden Apps ein MQTT-SUBSCRIBE implementiert werden, um die vom Arduino veröffentlichten Daten zu erhalten. Auch dies muss parallel zur Datenabfrage vom Webserver geschehen. Zusätzlich soll in den Apps dann ein Abgleich beider Daten (HTTP und MQTT) implementiert werden. Sind beide Daten gleich werden die neuen Koordinaten übernommen. Für den anderen Fall, dass die beiden Datenpakete unterschiedlich sind, muss noch überprüft werden, welche Daten dann gespeichert werden. 
  \\
-\textbf{Android} Seif
+\textbf{Android} 
+Im Großen und Ganzen war das Projekt eine neue Erfahrung, sowohl das Zusammenarbeiten oder auch die neuen technischen Kenntnisse, die man sich im erlernt hat.
+Was man bis jetzt erreicht hat, ist ein großer Schritt. Die App ist designtechnisch sehr fortgeschritten. Die Technik dahinter funktioniert. Version 1 hat alle mindesten Anforderungen erfüllt.
+Für den nächsten Versionen sollten mehr Möglichkeiten eine Datenbank Einbindung mit "Firebase", um die Datenbankverwaltung besser zu verwalten. Im Design der App konnten Verbesserungen durchgeführt werden..
+
 \\
 \textbf{iOS} Moni
