--- a/Bericht/Zielsetzung.tex
+++ b/Bericht/Zielsetzung.tex
@@ -1,5 +1,14 @@
 \section{Zielsetzung}
-%Problem lösen (Autodiebstahl verringern)
-%neue Dinge lernen (Verschlüsselung, App-Programmierung)
-%Wünsche der Teammitglieder bei voraussichtlicher Aufgabenverteilung berücksichtigen (ich hab hier zB noch Lucas im Kopf „bloss nichts mit Arduino“ xD )
-Seif
+\chapter{Zielsetzung}
+Das Ziel ist ein stabiles System zu kreieren, dass den Schutz vor Autodiebstahl anbietet. Das Projekt soll zu gut wie möglich realisiert werden, sodass es konkurrenzfähig ist. 
+Der Weg zur Realisierung des Projekts wird durch die modernsten Projektmanagements Arten wie in einer aktuellen Firma durchgeführt werden. 
+Das Produkt soll das Problem der Autodiebstahl verringern und die Statistik des Verbrachens verringern. Dafür wird die modernste Technik und günstig für den Anbieter angeboten.
+ Der Anbieter soll ein Sicherheitsgefühl bekommen, dass sein Auto sicher vor seiner Wohnung liegt.\\\\
+Das Projekt soll die Teammitglieder die korporative Arbeitsweise beibringen. 
+Kompetenzerwerb soll hier im Vordergrund liegen. Hierbei soll neue fachliche Kenntnisse erlernt werden.
+Die größte Herausforderung ist sowohl das schnelle Einarbeiten im Fachlichen als auch die Teamfähigkeit und die Zusammenarbeit in der Gruppe fördern.
+Die Teammitglieder haben sich das Projekt genauer analysiert und dann die Aufgaben unter sich gerecht aufgeteilt.\\
+\textbf{Paul Krause:} Die benötigte Hardware bereitzustellen und lauffähig sein\\
+\textbf{Lucas Hanisch:} Den Webserver bereitstellen der Schnittelle für das Smartphone App und der Hardware dient\\
+\textbf{Monique Golnik:} Die IOS App entwickeln\\
+\textbf{Seifeddine Mhiri:} Die Android App entwickeln\\
