Seifeddine Mhiri upload dokumentation

--- a/Bericht/Zielsetzung.tex
+++ b/Bericht/Zielsetzung.tex
@@ -8,7 +8,7 @@ Das Projekt soll die Teammitglieder die korporative Arbeitsweise beibringen.
 Kompetenzerwerb soll hier im Vordergrund liegen. Hierbei soll neue fachliche Kenntnisse erlernt werden.
 Die größte Herausforderung ist sowohl das schnelle Einarbeiten im Fachlichen als auch die Teamfähigkeit und die Zusammenarbeit in der Gruppe fördern.
 Die Teammitglieder haben sich das Projekt genauer analysiert und dann die Aufgaben unter sich gerecht aufgeteilt.\\
-\textbf{Paul Krause:} Die benötigte Hardware bereitzustellen und lauffähig sein\\
+\textbf{Paul Krause:} Die benötigte Hardware bereitzustellen und lauffähig sein\\\\
 \textbf{Lucas Hanisch:} Den Webserver bereitstellen der Schnittelle für das Smartphone App und der Hardware dient\\
 \textbf{Monique Golnik:} Die IOS App entwickeln\\
 \textbf{Seifeddine Mhiri:} Die Android App entwickeln\\
