--- a/Bericht/Entwicklung_Android.tex
+++ b/Bericht/Entwicklung_Android.tex
@@ -23,13 +23,13 @@ Android gehört Google und ist das am weitesten verbreitete Betriebssystem
 Der weltweite Marktanteil von Smartphones liegt bei etwa 85 %.\\\\
 Für die Entwicklung von Android Apps kann Android Studio verwendet werden. 
 Es bezieht sich auf die offizielle integrierte Entwicklungsumgebung (IDE) für Android. Die IDE hilft beim Entwerfen und Entwickeln Android-Anwendungen mit vielen Hilfsfunktionen. Es hat gute integriertes Support-Capability-Management für Gradle, die Software für Android-Apps verwendete Build-System. Neue Abhängigkeiten sind normalerweise direkt unter verfügbar Quellcode-Editor, keine Notwendigkeit, Build-Skripte manuell zu bearbeiten. 
-Android Studio hat auch viele andere sehr nützliche Funktionen, die oben nicht aufgeführt sind, wie z. B. eine integrierte Software-Versionskontrolle, effektive Debugging-Tools und einen sehr intelligenten Code-Inspektor[https://www.programmierenlernenhq.de/android-studio-tipps/].
+Android Studio hat auch viele andere sehr nützliche Funktionen, die oben nicht aufgeführt sind, wie z. B. eine integrierte Software-Versionskontrolle, effektive Debugging-Tools und einen sehr intelligenten Code-Inspektor[android].
 \subsection{Flutter}
 Was ist Flutter? Flutter ist ein von Google entwickeltes Framework um nativ kompilierbare Anwendungen anhand einer einzigen Codebasis zu schreiben.
 Flutter ist ein Open-Source-Framework von Google zur Entwicklung grafischer Anwendungen, die auf Mobilgeräten, Browsern und Computern ausgeführt werden. Der wichtige Aspekt sind die verschiedenen gemeinsamen Codebasen
 Plattform und laufen mit nativer Geschwindigkeit. Die gleiche Anwendung kann also auch ohne viele Änderungen auf eine andere Plattform kompiliert werden. Flutter bietet umfangreiche Bibliotheken mit vorgefertigten UI-Elementen.Datenströme sind sehr einfach zu implementieren und stellen sicher, dass Benutzer immer auf dem neuesten Stand sind.\\
 Die Verwendung des Flutter-Frameworks bietet mehrere Vorteile. Wie bereits erwähnt, liegt ein besonderer Fokus darauf, eine einzige Codebasis für viele Menschen zu verwenden Tree Form aufbauen. Das spart im Idealfall Zeit und Geld. Mit der "Hot Reload" Funktion ermöglicht es Entwicklern, schnell und einfach Schnittstellen zu erstellen, neue Funktionen hinzuzufügen und  
-Fehler schneller finden[https://it-talents.de/it-wissen/was-ist-flutter/].
+Fehler schneller finden[Flutter].
 \subsection{Dart}
 Flutter läuft auf Dart, der hauseigenen Programmiersprache von Google und basiert darauf.
 Dart ist eine von Google entwickelte Computersprache. Sein ursprüngliches Ziel war es, JavaScript zu ersetzen und die neue Sprache zu werden
@@ -68,7 +68,7 @@ In Flutter gibt es wieder eine Baumstruktur "Widget Tree". Jede betriebssystemsp
 Aus den Basis-Komponenten aus den verschiedenen Paketen konnte man eigene Widgets schreiben. So kann sich ein eigener, abgerundeter Button beispielsweise durch eine Kombination aus RawMaterialButton, Text und Icon-Widgets darstellen lassen.
 In Flattern werden Widgets jedoch als einfache Klassenvariablen über den Konstruktor der Klasse übergeben und können dort beliebig verwendet werden.
 Durch die Klassenvariablen lassen sich Komponenten in
-ihrem Aussehen sowie ihrer Funktionalität individualisieren und anpassen.[https://entwickler.de/mobile/flutter-haft]\\
+ihrem Aussehen sowie ihrer Funktionalität individualisieren und anpassen.[Flutterhaft]\\
 Es gibt zwei Arten von Komponenten in Flutter, die im Code explizit als solche benannt werden. Erstens ist es "Statful-Widgets", die einen Zustand beibehalten oder verwalten können. Andererseits gibt es "Stateless Widgets", die nur als statische, einfache Widgets dienen. Ein zustandsbehaftetes Widget erfordert immer eine zugeordnete createState()-Funktion. Eine Methode, die ein Zustandsobjekt (private Klasse) erstellt, das wiederum
 verwaltet den Widget-Status. Abgesetzt durch Aufruf von setState ()
 ruft die Methode build() auf, um die Komponente neu zu zeichnen. Die Methode build() wird beim Casting von Stateless verwendet
