--- a/Bericht/Quellen.bib
+++ b/Bericht/Quellen.bib
@@ -20,4 +20,15 @@
   url       = {https://www.amazon.de/GPS-Tracker-Motorrad-Fahrzeuge-Akkulaufzeit-Standby/dp/B07TV4W8H4/ref=sr_1_8?keywords=gps auto tracker&qid=1645548524&sprefix=gps aut,aps,97&sr=8-8},
 }
 
+@Misc{,
+  author       = {Dipl.-Ing Hanna Full},
+  howpublished = {moodle},
+  month        = jan,
+  title        = {Prototyping},
+  year         = {2022},
+  file         = {:C\:/Users/MiN0DE/OneDrive/Desktop/06 Design Thinking - Prototyping.pdf:PDF},
+  owner        = {Dipl.-Ing Hanna Full},
+  url          = {https://moodle.htw-berlin.de/pluginfile.php/1394565/mod_resource/content/1/06 Design Thinking - Prototyping.pdf},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
